// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots sign-in-form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="wrap"
  >
    <div
      className="content"
    >
      <input
        name="mailAddress"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="メールアドレス"
        type="text"
      />
    </div>
    <div
      className="content"
    >
      <input
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="パスワード"
        type="password"
      />
    </div>
    <div
      className="content"
    >
      <input
        type="submit"
        value="ログイン"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots sign-in-form Empty Error 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="wrap"
  >
    <div
      className="content"
    >
      <input
        name="mailAddress"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="メールアドレス"
        type="text"
      />
    </div>
    <div
      className="content"
    >
      <input
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="パスワード"
        type="password"
      />
    </div>
    <div
      className="content"
    >
      <input
        type="submit"
        value="ログイン"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots sign-in-form Filled 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="wrap"
  >
    <div
      className="content"
    >
      <input
        name="mailAddress"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="メールアドレス"
        type="text"
      />
    </div>
    <div
      className="content"
    >
      <input
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="パスワード"
        type="password"
      />
    </div>
    <div
      className="content"
    >
      <input
        type="submit"
        value="ログイン"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots sign-in-form Filled Success 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="wrap"
  >
    <div
      className="content"
    >
      <input
        name="mailAddress"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="メールアドレス"
        type="text"
      />
    </div>
    <div
      className="content"
    >
      <input
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="パスワード"
        type="password"
      />
    </div>
    <div
      className="content"
    >
      <input
        type="submit"
        value="ログイン"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots task-item Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="NG Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots task-item Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="NG Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots task-item Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="NG Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots task-list Default 1`] = `
<div
  className="list-items"
>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 1"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 2"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 3"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 4"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 5"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 6"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots task-list Empty 1`] = `
<div
  className="list-items"
>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-check"
    />
    <div
      className="title-message"
    >
      You have no tasks
    </div>
    <div
      className="subtitle-message"
    >
      Sit back and relax
    </div>
  </div>
</div>
`;

exports[`Storyshots task-list Loading 1`] = `
<div
  className="list-items"
>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots task-list With Pinned Tasks 1`] = `
<div
  className="list-items"
>
  <div
    className="list-item TASK_PINNED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 6 (pinned)"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 1"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 2"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 3"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 4"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 5"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
</div>
`;
